<resources>
    <string name="app_name">Mobile Labs</string>
    <string name="greeting">Hello!\n\nSelect a lab to begin:</string>
    <string name="lab3_greeting">Hi! Welcome to Lab 3 App</string>
    <string name="about_btn">About</string>
    <string name="lab3_btn">Lab 3</string>
    <string name="lab4_btn">Lab 4</string>
    <string name="lab5_btn">Lab 5</string>
    <string name="lab6_btn">Lab 6</string>
    <string name="lab7_btn">Lab 7</string>
    <string name="lab8_btn">Lab 8</string>
    <string name="lab9_btn">Lab 9</string>
    <string name="lab10_btn">Lab 10</string>
    <string name="close">Close</string>
    <string name="terms_placeholder">TERMS OF SERVICE GOES HERE</string>
    <string name="about_title">About</string>
    <string name="company_name">Android Lab App Production</string>
    <string name="about_msg">Hello this is a mobile app.</string>
    <string name="terms_btn">Terms and Conditions</string>
    <string name="lab4_msg">Swipe your notification menu down!</string>
    <string name="login_btn">Login</string>
    <string name="finish_btn">Finish</string>
    <string name="addContact_btn">Add Contact</string>
    <string name="addGrade_btn">Add Grade</string>
    <string name="firstName_label">First Name: </string>
    <string name="lastName_label">Last Name: </string>
    <string name="phoneNumber_label">Phone Number: </string>
    <string name="studentId_label">Student ID: </string>
    <string name="courseComponent_label">Course Component: </string>
    <string name="mark_label">Mark: </string>
    <string name="deleteContact_btn">Delete Contact</string>
    <string name="deleteGrade_btn">Delete Grade</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="about_greeting">This application is my solution for lab 3.\nCopyright Prashakar Prabagaran</string>
    <string name="location_disable">:(\n\nLocation is needed to use this feature.\n\n
        Your location will be used to pin-point your location and nothing else!</string>
    <string name="addressLine1">Address Line 1:</string>
    <string name="addressLine2">Address Line 2:</string>
    <string name="city">City:</string>
    <string name="province">Province:</string>
    <string name="country">Country:</string>
    <string name="postalCode">Postal Code:</string>
    <string name="phoneNumber">Phone Number:</string>
    <string name="url">Website URL:</string>
    <string name="title_activity_lab9_maps">Map</string>
    <string name="start">Start</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
</resources>
