<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.prash.mobile_labs.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textSize="25sp"
        android:text="@string/greeting"
        android:id="@+id/textView"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:onClick="openLab"
            android:tag="lab3"
            android:text="@string/lab3_btn"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"/>
        <Button
            android:onClick="openLab"
            android:tag="lab4"
            android:text="@string/lab4_btn"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"/>
        <Button
            android:onClick="openLab"
            android:tag="lab5"
            android:text="@string/lab5_btn"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
