<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lab3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.prash.mobile_labs.Lab3Activity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textSize="25sp"
        android:text="@string/lab3_greeting"
        android:id="@+id/textView"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:id="@+id/login"
            android:onClick="sendLogin"
            android:text="@string/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="2"/>
        <Button
            android:id="@+id/about"
            android:onClick="sendAbout"
            android:text="@string/about_btn"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
